fixed several things and make scrollbar thiccer

--- a/src/components/AboutUs/aboutUs.scss
+++ b/src/components/AboutUs/aboutUs.scss
@@ -15,8 +15,8 @@
     transform: translate(-50%, -50%);
   }
   .container {
+      margin-right: auto;
     display: flex;
-    justify-content: center;
     position: relative;
     height:60vh;
     top: 50%;
@@ -26,7 +26,7 @@
   .container .card {
     display: inline-block;
     margin-top: 50vh;
-    width: 30vw;
+    width: 35vw;
     height: 70vh;
     margin-right: 20px;
     position: relative;
